# ccr

./: .gitignore  Makefile.am  autogen.sh  configure.ac
data/: shell_slave-the_rescue_easy.level  shell_slave-the_rescue_extreme.level  shell_slave-the_rescue_hard.level  shell_slave-the_rescue_medium.level  shell_slave-the_servitude_easy.level  shell_slave-the_servitude_extreme.level  shell_slave-the_servitude_hard.level  shell_slave-the_servitude_medium.level  terminal_termination_easy.level  terminal_termination_extreme.level  terminal_termination_hard.level  terminal_termination_medium.level
src/: Game.cpp  Game.hpp  Level.cpp  Level.hpp  LevelManager.cpp  LevelManager.hpp  Makefile.am  main.cpp
