#    This file is part of Command Command Revolution.
#
#    Command Command Revolution is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Command Command Revolution is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with Command Command Revolution.  If not, see <http://www.gnu.org/licenses/>.

bin_PROGRAMS = ccr
ccr_SOURCES = main.cpp
ccr_CXXFLAGS = $(AM_CXXFLAGS) -std=gnu++0x
ccr_CPPFLAGS = $(AM_CPPFLAGS)
ccr_LDFLAGS = $(LDFLAGS)
ccr_LDADD = $(LDADD)
